fixed font-size on mobiles

--- a/Fabio/style.css
+++ b/Fabio/style.css
@@ -125,6 +125,6 @@ p {
         order: 13;
     }
     h1 {
-        font-size: 4.5em;
+        font-size: 3.8em;
     }
 }
